# meetkai_clone

./: README.md
backend_rust/: Cargo.toml  build.rs
backend_rust/src/: main.rs
grpc_protos/: README.md  advice_service.proto
machine_learning_flask/: .gitignore  README.md  requirements.txt
machine_learning_flask/app/: __init__.py  routes.py  utils.py
mobile_application_flutter/: .gitignore  README.md  build.yaml  pubspec.yaml
mobile_application_flutter/android/app/: build.gradle
mobile_application_flutter/ios/Runner/: Info.plist
mobile_application_flutter/ios/Runner.xcodeproj/: project.pbxproj
mobile_application_flutter/lib/: main.dart
mobile_application_flutter/lib/data_providers/api_providers/: movie_api_provider.dart
mobile_application_flutter/lib/data_providers/grpc_providers/: movie_grpc_provider.dart
mobile_application_flutter/lib/modals/built_value/: serializers.dart
mobile_application_flutter/lib/modals/data/: message.dart  message_position.dart
mobile_application_flutter/lib/pages/: chat.dart
mobile_application_flutter/lib/predefined/: enum_border_radius.dart  enum_colors.dart  local_config.dart  network.dart  routes.dart
mobile_application_flutter/lib/respositories/: movie_respository.dart
mobile_application_flutter/lib/screens/chat_screen/: chat_screen.dart
mobile_application_flutter/lib/services/: advice_service.dart
mobile_application_flutter/lib/utils/: debouncer.dart
mobile_application_flutter/lib/widgets/: touchable_icon.dart
mobile_application_flutter/test/: widget_test.dart
(+13 files in other folders)
