[package]
name = "backend_rust"
version = "0.1.0"
authors = ["datvt9312 <datvt9312@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost="0.6.1"
tonic={version="0.3.0", features=["tls"]}
tokio={version="0.2.22", features=["stream", "macros"]}
futures="0.3.5"
reqwest={version="0.10.7", features=["json"]}
serde={version = "1.0.115", features=["derive"]}

[build-dependencies]
tonic-build="0.3.0"